# flexcal

./: Cargo.toml  LICENSE.txt  README.md
src/: calendar.rs  date_range.rs  main.rs  schedule.rs
