[package]
name = "flexcal"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
